# document-similarity-tool

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml
docs/: .readthedocs.yml  Makefile  conf.py  index.rst
src/docsim/: __init__.py  cli.py  core.py  file_handling.py  similarity.py  utils.py  visualization.py
tests/: test_file_handling.py  test_similarity.py
